syntax = "proto3";

package payment;

// The greeting service definition.
service PaymentService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc getNewStudentPayments (StuPaymentsReq) returns (StuPaymentsRes) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message StuPaymentsReq {
  int32 studentRecord =1;
  int32 isPaid =2;
  int32 pageNo =3;
  int32 pageSize =4;
}

message StuPaymentsRes {
  int32 total =1;
  repeated User userList =2;
}

message User {
  
}

